# nfmw-archive

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  config.template.toml
.sqlx/: query-0637be4a8ff35cd80e2a1bbf534287e909868b43c80e842994bdb189d8d44175.json  query-095eb651706efa4c907519f17d35a09e56fd37b736ed84deee71203b843f490f.json  query-0b955d0d6ac4227134dccdc82d0dd4d7557ee59a352b9621baebceb134d751bb.json  query-1f776390b6760f0a9a6c27d0d273b4ced2b47a0b87210f4194f66d5165b7686a.json  query-223946e0b09ce5fba45fab4ecf8b7e39973cc17093f61b841f04613767a3e281.json  query-23322744cb20282aaf516eee5080e7ce8425e18fe73264280fbd66ecbded8fe2.json  query-306db5d2300a146e0676e2ebf369011e27f8c775ae8420986e50d23ca706562b.json  query-316277726700a934cd15f758bc6d496c402bc68848e6002a93efd4169a0ff4ec.json  query-393e6e66c407903eba823c8796df781835e5e86ddc93b84d88a378dbc7cf6f8c.json  query-3bf4f9c4cae6ca9e9e7f4bbd6663494714821b066dcfd116f0754cf9e9f3e7e7.json  query-412d06607f6d1052acc56daf58cee2300bab889194e45a601764b978b5e68df5.json  query-413143325c139a55d469a748610be355c0193843a27ab825050619d3f2aaa1c8.json  query-416c1eff2160668d99f790778e29a540138cd5890419859d75537e1984bb7f88.json  query-4c30652972b0c61696b614240ad9ca4c0c1716ebdf11ec8bb3c5a7498bdc4235.json  query-4d9ad6f0e4fc1f01f6b5560b6696f79171f709f46799158d7361ddb32e5ff019.json  query-53fa227993459ecee7b59d0608d91a6d58ce264b86bf843814f7c6e4ddd3789a.json  query-6f334d7cafa8ef5b7286eb0244f534e3d8cf003788cc747eae19cd5b187de401.json  (+12 more)
docker/: archive.Dockerfile
migrations/: schema.sql  (+15 more)
(+45 files in other folders)
