[package]
name = "nfmw-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
rand_core = { version = "0.9.3", features = ["os_rng"]}
sha2 = "0.10.9"
hex = "0.4.3"
subtle = "2.6.1"
base64 = "0.22.1"
