[package]
name = "nfmw-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-native-tls", "uuid", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
rand_core = { version = "0.9.3", features = ["os_rng"]}
sha2 = "0.10.9"
hex = "0.4.3"
subtle = "2.6.1"
base64 = "0.22.1"
axum = { version = "0.8.8", features = ["macros", "json", "multipart"] }
serde_json = "1.0.148"
libc = "0.2.179"
dotenvy = "0.15.7"
log = "0.4.29"
env_logger = "0.11.8"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
reqwest = { version = "0.13.1", features = ["form", "json"] }
axum-extra = { version = "0.12.5", features = ["multipart"] }
